--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ jdbc.password=helpmepls1
 jdbc.url=jdbc:postgresql://localhost:49155/wallet
 jdbc.user=danchuo
 liquibaseSchemaName=wallet_log
+secretKeyJwt=helpmepls
